--- a/app/src/main/res/layout/activity_rummy_address_verification.xml
+++ b/app/src/main/res/layout/activity_rummy_address_verification.xml
@@ -183,7 +183,7 @@
                     android:elevation="10dp"
                     android:padding="@dimen/margin_min"
                     android:layout_gravity="center"
-                    android:theme="@style/ProgressBar" />
+                    android:theme="@style/RummySdk_ProgressBar" />
             </FrameLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
