--- a/app/src/main/res/layout/activity_rummy_contects.xml
+++ b/app/src/main/res/layout/activity_rummy_contects.xml
@@ -52,7 +52,7 @@
                 android:layout_marginStart="8dp"
                 android:gravity="center"
                 android:text="@string/select_contacts"
-                android:textAppearance="@style/TextAppearance.MyTeam11.Normal"
+                android:textAppearance="@style/RummySdk_TextAppearance.Normal"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="@+id/icBack"
                 app:layout_constraintStart_toEndOf="@+id/icBack"
@@ -94,7 +94,7 @@
                 android:textColorHint="@color/text_color2"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                android:theme="@style/Widget.MyTeam11.TextInputLayout"
+                android:theme="@style/RummySdk_Widget.TextInputLayout"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +138,7 @@
             android:background="@drawable/bg_white_progress"
             android:elevation="10dp"
             android:padding="@dimen/margin_min"
-            android:theme="@style/ProgressBar"
+            android:theme="@style/RummySdk_ProgressBar"
             android:visibility="@{viewModel.isLoading() ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
