--- a/app/src/main/res/layout/bottomsheet_dialog_quick_guide_rummy.xml
+++ b/app/src/main/res/layout/bottomsheet_dialog_quick_guide_rummy.xml
@@ -75,7 +75,7 @@
                     android:padding="@dimen/margin_min"
                     android:layout_gravity="center"
                     android:indeterminateTint="@{Color.parseColor(color)}"
-                    android:theme="@style/ProgressBar" />
+                    android:theme="@style/RummySdk_ProgressBar" />
             </FrameLayout>
 
         </WebView>
