--- a/app/src/main/res/layout/bottomsheet_dialog_webview_rummy.xml
+++ b/app/src/main/res/layout/bottomsheet_dialog_webview_rummy.xml
@@ -89,7 +89,7 @@
                         android:elevation="10dp"
                         android:indeterminateTint="@{Color.parseColor(color)}"
                         android:padding="@dimen/margin_min"
-                        android:theme="@style/ProgressBar" />
+                        android:theme="@style/RummySdk_ProgressBar" />
                 </FrameLayout>
 
             </WebView>
