--- a/app/src/main/res/layout/fragment_address_verify_with_aadhaar_rummy.xml
+++ b/app/src/main/res/layout/fragment_address_verify_with_aadhaar_rummy.xml
@@ -214,7 +214,7 @@
                 android:padding="@dimen/margin_min"
                 android:layout_gravity="center"
                 android:indeterminateTint="@{Color.parseColor(viewmodel.selectedColor)}"
-                android:theme="@style/ProgressBar" />
+                android:theme="@style/RummySdk_ProgressBar" />
         </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
