--- a/app/src/main/res/layout/fragment_bank_verification_rummy.xml
+++ b/app/src/main/res/layout/fragment_bank_verification_rummy.xml
@@ -137,7 +137,7 @@
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/editBankFullName"
-                    style="@style/Widget.MyTeam11.BorderEditText"
+                    style="@style/RummySdk_Widget.BorderEditText"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
@@ -174,7 +174,7 @@
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/editAccountNumber"
-                    style="@style/Widget.MyTeam11.BorderEditText"
+                    style="@style/RummySdk_Widget.BorderEditText"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
@@ -212,7 +212,7 @@
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/editReEnterAccountNumber"
-                    style="@style/Widget.MyTeam11.BorderEditText"
+                    style="@style/RummySdk_Widget.BorderEditText"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
@@ -249,7 +249,7 @@
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/editIFSCCode"
-                    style="@style/Widget.MyTeam11.BorderEditText"
+                    style="@style/RummySdk_Widget.BorderEditText"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
@@ -285,7 +285,7 @@
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/editBankName"
-                    style="@style/Widget.MyTeam11.BorderEditText"
+                    style="@style/RummySdk_Widget.BorderEditText"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
@@ -320,7 +320,7 @@
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/editBankBranch"
-                    style="@style/Widget.MyTeam11.BorderEditText"
+                    style="@style/RummySdk_Widget.BorderEditText"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
@@ -368,7 +368,7 @@
                     android:background="@drawable/bg_white_progress"
                     android:elevation="10dp"
                     android:padding="@dimen/margin_min"
-                    android:theme="@style/ProgressBar"
+                    android:theme="@style/RummySdk_ProgressBar"
                     android:visibility="@{viewmodel.isProgressLoading?View.VISIBLE:View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
