--- a/app/src/main/res/layout/fragment_cash_bonus_rummy.xml
+++ b/app/src/main/res/layout/fragment_cash_bonus_rummy.xml
@@ -206,7 +206,7 @@
             android:background="@drawable/bg_white_progress"
             android:elevation="10dp"
             android:padding="@dimen/margin_min"
-            android:theme="@style/ProgressBar"
+            android:theme="@style/RummySdk_ProgressBar"
             android:visibility="@{viewmodel.isLoading() ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
