--- a/app/src/main/res/layout/item_new_wallet_rummy.xml
+++ b/app/src/main/res/layout/item_new_wallet_rummy.xml
@@ -44,7 +44,7 @@
             android:layout_marginStart="16dp"
             android:fontFamily="@font/rubik_medium"
             android:text="@{model.data.Title}"
-            android:textAppearance="@style/TextAppearance.MyTeam11.Normal"
+            android:textAppearance="@style/RummySdk_TextAppearance.Normal"
             android:textColor="@color/text_color8"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/imgCardType"
@@ -164,7 +164,7 @@
             android:gravity="center"
             android:text="@{ model.data.DiffAmount > 0.0 ? `ADD &amp; PAY` : `PAY`}"
             android:onClick="@{()->model.listner.payViaWallet(model.data)}"
-            android:textAppearance="@style/TextAppearance.MyTeam11.Medium"
+            android:textAppearance="@style/RummySdk_TextAppearance.Medium"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:visibility="@{model.data.isSelected?View.VISIBLE:View.GONE}"
@@ -202,7 +202,7 @@
             app:placeHolder='@{@string/rupees}'
             app:placeHolderAtStart="@{true}"
             android:visibility="@{model.data.isSelected &amp;&amp; model.data.DiffAmount > 0.0 ? View.VISIBLE:View.GONE,default=gone}"
-            android:textAppearance="@style/TextAppearance.MyTeam11.Medium"
+            android:textAppearance="@style/RummySdk_TextAppearance.Medium"
             android:textColor="@color/gunmetal"
             android:textSize="16sp"
             app:layout_constraintHorizontal_bias="0"
