--- a/app/src/main/res/layout/layout_progress_dialog_rummy.xml
+++ b/app/src/main/res/layout/layout_progress_dialog_rummy.xml
@@ -31,7 +31,7 @@
         android:elevation="10dp"
         android:padding="@dimen/margin_min"
         android:visibility="@{visible ? View.VISIBLE :View.GONE }"
-        android:theme="@style/ProgressBar" />
+        android:theme="@style/RummySdk_ProgressBar" />
 
 </FrameLayout>
 </layout>
