--- a/app/src/main/res/drawable/bg_primary_box.xml
+++ b/app/src/main/res/drawable/bg_primary_box.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/contiButtonColor" />
+            <solid android:color="@color/maingreen" />
             <corners android:radius="4dp" />
         </shape>
     </item>
