--- a/app/src/main/res/layout/activity_deep_link_rummy.xml
+++ b/app/src/main/res/layout/activity_deep_link_rummy.xml
@@ -38,7 +38,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:padding="@dimen/margin_min"
-            android:theme="@style/ProgressBar"
+            android:theme="@style/RummySdk_ProgressBar"
             app:layout_constraintBottom_toTopOf="@id/txt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
