--- a/app/src/main/res/layout/activity_rummy_games_ticket.xml
+++ b/app/src/main/res/layout/activity_rummy_games_ticket.xml
@@ -177,7 +177,7 @@
             android:background="@drawable/bg_white_progress"
             android:elevation="10dp"
             android:padding="@dimen/margin_min"
-            android:theme="@style/ProgressBar"
+            android:theme="@style/RummySdk_ProgressBar"
             android:visibility="@{viewModel.isParentLoading? View.VISIBLE: View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
