--- a/app/src/main/res/layout/activity_rummy_withdraw_detail.xml
+++ b/app/src/main/res/layout/activity_rummy_withdraw_detail.xml
@@ -59,7 +59,7 @@
                 android:fontFamily="@font/rubik_medium"
                 android:gravity="center"
                 android:text="@string/withdrawal_details"
-                android:textAppearance="@style/TextAppearance.MyTeam11.Small"
+                android:textAppearance="@style/RummySdk_TextAppearance.Small"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -292,7 +292,7 @@
             android:background="@drawable/bg_white_progress"
             android:elevation="10dp"
             android:padding="@dimen/margin_min"
-            android:theme="@style/ProgressBar"
+            android:theme="@style/RummySdk_ProgressBar"
             android:visibility="@{viewModel.isLoading()? View.VISIBLE: View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
