--- a/app/src/main/res/layout/bottom_sheet_join_game_rummy.xml
+++ b/app/src/main/res/layout/bottom_sheet_join_game_rummy.xml
@@ -45,7 +45,7 @@
                 android:gravity="center"
                 android:text="@string/bs_join_confirmation"
                 android:textAllCaps="true"
-                android:textAppearance="@style/TextAppearance.MyTeam11.Medium"
+                android:textAppearance="@style/RummySdk_TextAppearance.Medium"
                 android:textColor="@color/text_color8"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -308,7 +308,7 @@
                 android:elevation="10dp"
                 android:indeterminateTint="@color/text_color8"
                 android:padding="@dimen/margin_min"
-                android:theme="@style/ProgressBar"
+                android:theme="@style/RummySdk_ProgressBar"
                 android:visibility="@{viewModel.isLoading() ?  View.VISIBLE:View.GONE}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
