--- a/app/src/main/res/layout/bottomsheet_add_upi_rummy.xml
+++ b/app/src/main/res/layout/bottomsheet_add_upi_rummy.xml
@@ -85,7 +85,7 @@
                 android:text="Add New UPI ID"
                 android:textSize="12sp"
                 android:textColor="@color/text_color8"
-                android:textAppearance="@style/TextAppearance.MyTeam11.Medium"
+                android:textAppearance="@style/RummySdk_TextAppearance.Medium"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -114,7 +114,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_upi"
-                android:theme="@style/Widget.MyTeam11.TextInputLayoutActivate"
+                android:theme="@style/RummySdk.TextInputLayoutActivate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:hint="Enter Upi Id"
@@ -245,7 +245,7 @@
                 android:gravity="center"
                 android:alpha="@{viewModel.validUpiCode ?1.0f :0.5f,default=0.5}"
                 android:text="ADD &amp; PAY"
-                android:textAppearance="@style/TextAppearance.MyTeam11.Medium"
+                android:textAppearance="@style/RummySdk_TextAppearance.Medium"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -262,7 +262,7 @@
                 android:text="Cancel"
                 android:textSize="12sp"
                 android:onClick="@{()->viewModel.hideAllSheet()}"
-                android:textAppearance="@style/TextAppearance.MyTeam11.Medium"
+                android:textAppearance="@style/RummySdk_TextAppearance.Medium"
                 android:textColor="@color/cool_grey"
                 app:layout_constraintEnd_toStartOf="@+id/txtAdd"
                 app:layout_constraintStart_toStartOf="parent"
