--- a/app/src/main/res/layout/dialog_alert_notification_rummy.xml
+++ b/app/src/main/res/layout/dialog_alert_notification_rummy.xml
@@ -29,7 +29,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="8dp"
-                    android:text="@string/app_name"
+                    android:text="@string/app_name_rummy"
                     android:textColor="@color/text_color8"
                     android:textSize="14sp"
                     android:textStyle="bold"
