--- a/app/src/main/res/layout/dialog_coupon_applied_rummy.xml
+++ b/app/src/main/res/layout/dialog_coupon_applied_rummy.xml
@@ -53,7 +53,7 @@
             android:textColor="@color/text_color8"
             android:fontFamily="@font/rubik_medium"
             android:textSize="12sp"
-            android:textAppearance="@style/TextAppearance.MyTeam11.Large"
+            android:textAppearance="@style/RummySdk_TextAppearance.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/animDone" />
@@ -84,7 +84,7 @@
             android:elevation="@dimen/margin_micro"
             android:gravity="center"
             android:text="@string/ok"
-            android:textAppearance="@style/TextAppearance.MyTeam11.Medium"
+            android:textAppearance="@style/RummySdk_TextAppearance.Medium"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
