--- a/app/src/main/res/layout/dialog_wallet_redeem_code_rummy.xml
+++ b/app/src/main/res/layout/dialog_wallet_redeem_code_rummy.xml
@@ -67,7 +67,7 @@
                    android:layout_marginEnd="24dp"
                    android:textColorHint="@color/text_color2"
                    app:TextInputTintColor="@{@color/text_color2}"
-                   android:theme="@style/Widget.MyTeam11.TextInputLayout"
+                   android:theme="@style/RummySdk_Widget.TextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView29">
