--- a/app/src/main/res/layout/fragment_feedback_rummy.xml
+++ b/app/src/main/res/layout/fragment_feedback_rummy.xml
@@ -190,7 +190,7 @@
                                 android:layout_marginEnd="@dimen/margin_min"
                                 android:fontFamily="@font/rubik_regular"
                                 android:hint="@string/select_feedback_category"
-                                android:theme="@style/Widget.MyTeam11.TextInputLayoutActivate"
+                                android:theme="@style/RummySdk.TextInputLayoutActivate"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent">
@@ -241,7 +241,7 @@
                             android:layout_marginEnd="@dimen/margin_min"
                             android:fontFamily="@font/rubik_regular"
                             android:hint="@string/frag_feedback_title"
-                            android:theme="@style/Widget.MyTeam11.TextInputLayoutActivate"
+                            android:theme="@style/RummySdk.TextInputLayoutActivate"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/layout1">
@@ -273,7 +273,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             android:paddingBottom="@dimen/margin_min"
                             android:hint="@string/frag_feedback_your_massage"
-                            android:theme="@style/Widget.MyTeam11.TextInputLayoutActivate"
+                            android:theme="@style/RummySdk.TextInputLayoutActivate"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/inputLayout1">
@@ -336,7 +336,7 @@
             android:background="@drawable/bg_white_progress"
             android:elevation="10dp"
             android:padding="@dimen/margin_min"
-            android:theme="@style/ProgressBar"
+            android:theme="@style/RummySdk_ProgressBar"
             android:visibility="@{viewmodel.isLoading?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
