--- a/app/src/main/res/layout/fragment_help_desk_rummy.xml
+++ b/app/src/main/res/layout/fragment_help_desk_rummy.xml
@@ -443,7 +443,7 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="4dp"
                         android:fontFamily="@font/rubik_regular"
-                        android:text="@string/app_name"
+                        android:text="@string/app_name_rummy"
                         android:textColor="@color/text_color2"
                         android:textSize="10sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -512,7 +512,7 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="4dp"
                         android:fontFamily="@font/rubik_regular"
-                        android:text="@string/app_name"
+                        android:text="@string/app_name_rummy"
                         android:textColor="@color/text_color2"
                         android:textSize="10sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -581,7 +581,7 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="4dp"
                         android:fontFamily="@font/rubik_regular"
-                        android:text="@string/app_name"
+                        android:text="@string/app_name_rummy"
                         android:textColor="@color/text_color2"
                         android:textSize="10sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -650,7 +650,7 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="4dp"
                         android:fontFamily="@font/rubik_regular"
-                        android:text="@string/app_name"
+                        android:text="@string/app_name_rummy"
                         android:textColor="@color/text_color2"
                         android:textSize="10sp"
                         app:layout_constraintBottom_toBottomOf="parent"
