--- a/app/src/main/res/layout/fragment_more_rummy.xml
+++ b/app/src/main/res/layout/fragment_more_rummy.xml
@@ -420,7 +420,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="16dp"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:paddingVertical="12dp">
 
                     <ImageView
