--- a/app/src/main/res/layout/fragment_refer_rummy.xml
+++ b/app/src/main/res/layout/fragment_refer_rummy.xml
@@ -119,7 +119,7 @@
 
                         <ProgressBar
                             android:id="@+id/progressBar"
-                            style="@style/customProgressBar"
+                            style="@style/RummySdk_customProgressBar"
                             android:layout_width="match_parent"
                             android:layout_height="4dp"
                             android:layout_marginStart="10dp"
@@ -168,7 +168,7 @@
                         android:background="@drawable/bg_white_progress"
                         android:elevation="10dp"
                         android:padding="@dimen/margin_min"
-                        android:theme="@style/ProgressBar"
+                        android:theme="@style/RummySdk_ProgressBar"
                         android:visibility="@{viewmodel.isLoading() ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
