--- a/app/src/main/res/layout/fragment_unutilized_rummy.xml
+++ b/app/src/main/res/layout/fragment_unutilized_rummy.xml
@@ -287,7 +287,7 @@
                 android:id="@+id/loadingLogin"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:theme="@style/ProgressBar"
+                android:theme="@style/RummySdk_ProgressBar"
                 android:background="@drawable/bg_white_progress"
                 android:padding="@dimen/margin_min"
                 android:elevation="10dp"
