--- a/app/src/main/res/layout/item_all_payment_rummy.xml
+++ b/app/src/main/res/layout/item_all_payment_rummy.xml
@@ -102,7 +102,7 @@
             android:gravity="center"
             android:text="PAY"
             android:onClick="@{()->model.listner.payViaNetBanking(model.data)}"
-            android:textAppearance="@style/TextAppearance.MyTeam11.Medium"
+            android:textAppearance="@style/RummySdk_TextAppearance.Medium"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:visibility="@{model.data.isSelected?View.VISIBLE:View.GONE,default=gone}"
