--- a/app/src/main/res/layout/item_new_card_rummy.xml
+++ b/app/src/main/res/layout/item_new_card_rummy.xml
@@ -170,7 +170,7 @@
             android:gravity="center"
             android:onClick="@{()->onPayClick.invoke()}"
             android:text="PAY"
-            android:textAppearance="@style/TextAppearance.MyTeam11.Medium"
+            android:textAppearance="@style/RummySdk_TextAppearance.Medium"
             android:textColor="@color/white"
             android:textSize="12sp"
             android:visibility="@{model.data.isSelected?View.VISIBLE:View.GONE,default=gone}"
