--- a/app/src/main/res/layout/item_refer_earn_rummy.xml
+++ b/app/src/main/res/layout/item_refer_earn_rummy.xml
@@ -110,7 +110,7 @@
 
             <ProgressBar
                 android:id="@+id/progressBar"
-                style="@style/customProgressBar"
+                style="@style/RummySdk_customProgressBar"
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
                 android:layout_marginStart="8dp"
