--- a/app/src/main/res/layout/layout_dl_verify_rummy.xml
+++ b/app/src/main/res/layout/layout_dl_verify_rummy.xml
@@ -88,14 +88,14 @@
             android:layout_marginTop="10dp"
             app:hintEnabled="false"
             app:TextInputTintColor="@{@color/text_color2}"
-            android:theme="@style/Widget.MyTeam11.TextInputLayoutActivate"
-            app:hintTextAppearance="@style/TextInputLayout"
+            android:theme="@style/RummySdk.TextInputLayoutActivate"
+            app:hintTextAppearance="@style/RummySdk.TextInputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/hintDlNumber">
 
 
-            <com.google.android.material.textfield.TextInputEditText
+            <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/editDLNumber"
                 android:backgroundTint="@color/text_color3"
                 android:layout_width="match_parent"
@@ -135,8 +135,8 @@
             android:layout_marginTop="10dp"
             app:hintEnabled="false"
             app:TextInputTintColor="@{@color/text_color2}"
-            android:theme="@style/Widget.MyTeam11.TextInputLayoutActivate"
-            app:hintTextAppearance="@style/TextInputLayout"
+            android:theme="@style/RummySdk.TextInputLayoutActivate"
+            app:hintTextAppearance="@style/RummySdk.TextInputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/hintDob">
