--- a/app/src/main/res/layout/layout_email_rummy.xml
+++ b/app/src/main/res/layout/layout_email_rummy.xml
@@ -66,7 +66,7 @@
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/editEmail"
-                style="@style/Widget.MyTeam11.BorderEditTextV2"
+                style="@style/RummySdk_Widget.BorderEditTextV2"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/edittext_height"
                 android:hint="@string/hint_email"
@@ -89,7 +89,7 @@
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/editPassword"
-                style="@style/Widget.MyTeam11.BorderEditTextV2"
+                style="@style/RummySdk_Widget.BorderEditTextV2"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/edittext_height"
                 android:hint="@string/password"
