--- a/app/src/main/res/layout/activity_deep_link_rummy.xml
+++ b/app/src/main/res/layout/activity_deep_link_rummy.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.rummytitans.playcashrummyonline.cardgame.ui.deeplink.DeepLinkViewModel" />
+            type="com.rummytitans.playcashrummyonline.cardgame.ui.deeplink.DeepLinkRummyViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        tools:context=".ui.deeplink.DeepLinkActivity">
+        tools:context=".ui.deeplink.DeepLinkActivityRummy">
 
         <com.rummytitans.playcashrummyonline.cardgame.widget.RoundedImageView
             android:id="@+id/logo"
